@startuml

title __HOME's Class Diagram__\n

  namespace com.code.group3finalproject {
    namespace ui.home {
      class com.code.group3finalproject.ui.home.HomeFragment {
          - root : View
          + onCreateOptionsMenu()
          + onCreateView()
          + onDestroyView()
          + onItemClick()
          + onPause()
      }
    }
  }
  

  namespace com.code.group3finalproject {
    namespace ui.home {
      class com.code.group3finalproject.ui.home.HomeViewModel {
          - mText : MutableLiveData<String>
          + HomeViewModel()
          + getText()
      }
    }
  }
  

  com.code.group3finalproject.ui.home.HomeFragment .up.|> com.code.group3finalproject.RSSFeedRecyclerViewAdapter.OnItemClickListener
  com.code.group3finalproject.ui.home.HomeFragment -up-|> androidx.fragment.app.Fragment
  com.code.group3finalproject.ui.home.HomeFragment o-- com.code.group3finalproject.RSSFeedRecyclerViewAdapter : RSSRecycleFeed
  com.code.group3finalproject.ui.home.HomeFragment o-- com.code.group3finalproject.databinding.FragmentHomeBinding : binding
  com.code.group3finalproject.ui.home.HomeFragment o-- com.code.group3finalproject.RSSClasses.RSSManagedClasses : feedManager
  com.code.group3finalproject.ui.home.HomeFragment o-- com.code.group3finalproject.ui.home.HomeViewModel : homeViewModel
  com.code.group3finalproject.ui.home.HomeViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
